--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,7 +3,7 @@
    color: white;
 }   
 body {
-    background-image: url(../../assets/fondo-2.jpg);
+    background-image: url(https://img.freepik.com/premium-photo/blurred-bookshelf-many-old-books-book-shop-library_36051-477.jpg);
     background-attachment: fixed;
     background-repeat: no-repeat;
     margin: 0;
