--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,31 +17,36 @@ body {
     display: flex;
 }
 /** Movil **/
-@media (max-width: 576px) {
+@media (max-width: 599px) {
     html, body {
         min-width: 100%;
         min-height: 100vh; 
+        display: flex;
     }
     #login {
-        float: left;
-        margin-top: 119%;
-        margin-left: 20%;
-        width: 100%;
+        position: static;
+        margin-top: 9%;
+        padding: auto;
+        width: 90%;
+        margin-left: 5%;
+        margin-right: 5%;
         text-align: center;
         font-size: 1rem;
     }
     #logo_school {
-        float: left;
         margin-top: 30%;
         border-radius: 50%;
-        margin-left: 22%;
-        margin: 22%;
+        margin: 26%;
         margin-bottom: 0;
-        width: 55%;
+        width: 60%;
+        margin-right: 20%;
+        margin-left: 20%;
     }
     #images {
-        float: left;
-        position: fixed;
+        width: 80%;
+        position: absolute;
+        margin-left: 10%;
+        margin-right: 10%;
     }   
     .caja {
         position: relative;
@@ -51,9 +56,9 @@ body {
         outline: 0px;
         border: 2px solid #c7c7c7;
         border-radius: 5px;
-        width: 250px;
-        text-align: center;
+        width: 65%;
         height: 40px;
+        text-align: center;
         color: #ffffff;
         margin-bottom: 9%;
     }
@@ -62,33 +67,167 @@ body {
         color: darksalmon;
         font-size: 17px;
     }
-    .icons {
-        display: inline-flex;
-        width: 15%;
-        height: 15%;
-    }
     #div-icons {
-        margin-top: 20%;
-        margin-left: 20%;
-        float: left;
-        margin-top: 93%;
-        margin-left: 32%;
+        padding-left: 27%;
+    }
+    .icons {
+        width: 20%;
     }
     #help {
-        display: flex;
         width: 50px;
         height: 50px;
+        display: flex;
         float: right;
-        margin-right: -20%;
+        margin-top: -170%;
+    }
+}
+/** Tablets **/
+@media (min-width: 600px) and (max-width: 1099px) {           
+    html, body {
+        min-width: 100%;
+        min-height: 100vh; 
+        display: flex;
+    }
+    #login {
+        position: relative;
+        margin-top: 15%;
+        width: 190%;
+        margin-left: 5%;
+        margin-right: 5%;
+        text-align: center;
+        font-size: 1rem;
+    }
+    #logo_school {
+        border-radius: 50%;
+        margin: 7%;
+        margin-bottom: 0;
+        width: 100%;
+        margin-right: 50%;
+        margin-left: 50%;
+    }
+    #images {
+        width: 80%;
+        position: absolute;
+        margin-left: 10%;
+        margin-right: 10%;
+    }   
+    .caja {
+        position: relative;
+        overflow: hidden;
+        background: none;
+        border: none;
+        outline: 0px;
+        border: 5px solid #c7c7c7;
+        border-radius: 5px;
+        width: 60%;
+        text-align: center;
+        height: 70px;
+        color: #ffffff;
+        margin-bottom: 9%;
+        font-size: 2rem;
+    }
+    #botoncito {
+        background-color: white;
+        color: darksalmon;
+        font-size: 17px;
+        font-size: 2rem;
+    }
+    #div-icons {
+        padding-left: 27%;
+    }
+    .icons {
+        width: 20%;
+    }
+    #help {
+        width: 80px;
+        height: 80px;
+        display: flex;
+        float: right;
+        margin-top: -240%;
+        margin-right: -95%;
     }
 }
 /** Escritorio **/
-@media (min-width: 991px) {
+@media (min-width: 1100px) and (max-width: 1499px) {
     #login {
         float: right;
         margin-right: 0px;
         margin-left: 53%;
-        margin-top: 5%;
+        margin-top: 15%;
+        position: fixed;
+    }
+    .text {
+        font-size: 3rem;
+        text-align: center;
+        margin-bottom: 0;
+    }
+    #school_name {
+        margin-top: 0;
+        font-size: 1rem;
+    }
+    form {
+        margin-top: 15%;
+    }
+    .caja {
+        position: relative;
+        overflow: hidden;
+        background: none;
+        border: none;
+        outline: 0px;
+        border: 2px solid #c7c7c7;
+        border-radius: 5px;
+        width: 450px;
+        text-align: center;
+        height: 40px;
+        color: #ffffff;
+        margin-bottom: 9%;
+    }
+    #botoncito {
+        background-color: white;
+        color: darksalmon;
+        font-size: 20px;
+        margin-left: 5px;
+    }
+    #images {
+        float: left;
+        margin-right: 40%;
+        margin-left: 30%;
+        margin-top: 80%;
+    }
+    #logo_school {
+        margin: 5%;
+        margin-top: 15%;
+        width: 35%;
+        border-radius: 50%;
+        position: fixed;
+    }
+    #div-icons {
+        margin-top: 70%;
+        margin-left: 20%;
+        margin-right: -50%;
+    }
+    .icons {
+        display: inline-block;
+        width: 20%;
+        color: #ffffff;
+    }
+    #help {
+        position: relative;
+        display: flex;
+        width: 8%;
+        height: 8%;
+        float: right;
+        margin-right: -85%;
+        margin-top: 105%;
+    }    
+}
+/** TVs **/
+@media (min-width: 1500px) {
+    #login {
+        float: right;
+        margin-right: 0px;
+        margin-left: 53%;
+        margin-top: 15%;
         position: fixed;
     }
     .text {
@@ -127,33 +266,33 @@ body {
         float: left;
         margin-right: 40%;
         margin-left: 15%;
-        margin-top: 15%;
+        margin-top: 65%;
     }
     #logo_school {
-        width: 130%;
-        height: 120%;
+        margin: 5%;
+        margin-top: 15%;
+        width: 35%;
         border-radius: 50%;
+        position: fixed;
     }
     #div-icons {
-        margin-top: 4%;
+        margin-top: 70%;
         margin-right: 10%;
         margin-left: 20%;
-        display: flex;
+        margin-right: -42%;
     }
     .icons {
-        float: inline-end;
-        width: 80%;
-        height: 97%;
-        margin-right: -35%;
+        display: inline-block;
+        width: 20%;
         color: #ffffff;
     }
     #help {
         position: relative;
         display: flex;
-        width: 7%;
-        height: 7%;
+        width: 8%;
+        height: 8%;
         float: right;
-        margin-right: -87%;
-        margin-top: 78%;
-    }    
+        margin-right: -85%;
+        margin-top: 105%;
+    }
 }
