--- a/src/css/style.css
+++ b/src/css/style.css
@@ -27,7 +27,7 @@ body {
     }
     #login {
         position: static;
-        margin-top: 9%;
+        margin-top: 14%;
         padding: auto;
         width: 90%;
         margin-left: 5%;
@@ -53,6 +53,9 @@ body {
     input {
         color: #ffffff;
     }   
+    .caja:first-child {
+        margin-top: 4%;
+    }
     .caja {
         position: relative;
         overflow: hidden;
@@ -86,7 +89,7 @@ body {
         height: 50px;
         display: flex;
         float: right;
-        margin-top: -170%;
+        margin-top: -160%;
     }
 }
 /** Tablets **/
